# AgnetOps

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  seed.py  worker.py
backend/agentops_runtime_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: agents.py  approvals.py  checkpoints.py  platform.py
backend/app/core/: config.py  logging.py  telemetry.py
backend/app/db/: session.py
backend/app/models/: entities.py
backend/app/schemas/: agent.py  graph.py  metrics.py
backend/app/services/: approval_service.py  checkpoint_service.py  evaluation_service.py  event_bus_service.py  guardrails_service.py  knowledge_graph_service.py  llm_service.py  metrics_service.py  policy.yaml  recovery_service.py  runtime_service.py
backend/app/workers/: recovery_worker.py
backend/app/workflows/: medical_workflow.py
backend/tests/integration/: test_health.py
backend/tests/unit/: test_evaluation.py  test_guardrails.py
docs/: ROADMAP.md
docs/adr/: ADR-001-clean-architecture.md  ADR-002-otel-first.md  ADR-003-hybrid-memory.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
k8s/: backend-deployment.yaml  frontend-deployment.yaml
(+7 files in other folders)
